[package]
name = "wg-sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13"
genetlink = "0.2"
netlink-packet-core = "0.4"
netlink-packet-generic = "0.3"
netlink-packet-route = "0.11"
netlink-packet-utils = "0.5"
netlink-packet-wireguard = "0.2"
netlink-proto = "0.9"
netlink-sys = "0.8"
rtnetlink = "0.9"
tokio = { version = "1.19", features = ["macros", "rt", "rt-multi-thread"] }
futures = "0.3"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "1.14", features = ["macros", "json"] }
log = "0.4"
env_logger = "0.9"
reqwest = { version = "0.11", features = ["tokio-native-tls", "json"] }
url = "2.2.2"
wireguard-uapi = "2.0.5"
crypto_box = "0.7"
generic-array = "0.14"
clap = { version = "3.2.15", features = ["derive", "color"] }

[profile.release]
strip = true

[features]
default = ["wireguard_uapi"]
wireguard_uapi = []
rtnetlink = []
